<resources>
    <string name="app_name">DRTLS RURail</string>
    <string name="app_version">Version: %1$s</string>
    <string name="drag_handle">drag handle</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="menu_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_development_tools">Development tools</string>
    <string name="ab_overview">Network Details</string>
    <string name="ab_grid">Grid</string>
    <string name="ab_ble_log">BLE log</string>
    <string name="ab_errors_warnings">Errors/Warnings</string>
    <string name="ab_position_log">Grid</string>
    <string name="network_id">network id: %1$s</string>
    <string name="network_opmode">operation mode: %1$s</string>
    <string name="log_title_network">LOG for network: %1$s (%2$s)</string>
    <string name="log_title_discovery">Discovery LOG</string>
    <string name="ble_not_supported">BLE not supported on this device!</string>
    <string name="ble_not_turned_on">Turn on Bluetooth, please!</string>
    <string name="screen_title_discovery">Networks &amp; Devices</string>
    <string name="screen_title_auto_positioning">Auto positioning</string>
    <string name="screen_title_problematic_nodes">Problematic nodes</string>
    <string name="screen_title_firmware_update">Firmware update</string>
    <string name="screen_title_node_details">Details</string>
    <string name="screen_title_floorplan">Floor plan</string>
    <string name="screen_title_position_log">Position log</string>
    <string name="screen_title_debug_log">Debug log</string>
    <string name="screen_title_debug_console">Console: %1$s</string>
    <string name="screen_title_settings">Settings</string>
    <string name="screen_title_instructions">Instructions</string>
    <string name="screen_title_setup_geofence">Setup geofence</string>
    <string name="no_network">No network</string>
    <string name="no_configured_network">No saved network</string>
    <string name="no_network_nodes">No network nodes</string>
    <string name="no_reachable_anchor_nodes">No reachable active anchor nodes</string>
    <string name="no_errors">No errors/warnings reported</string>
    <string name="do_discovery">Start Device Discovery</string>
    <string name="no_nearby_devices_found">no unassigned devices found</string>
    <string name="node_detail_id">ID</string>
    <string name="node_detail_ble_address">BLE</string>
    <string name="node_detail_location_data_mode">Location data mode</string>
    <string name="node_detail_position">Position (%1$s)</string>
    <string name="node_detail_position_x">X</string>
    <string name="node_detail_position_y">Y</string>
    <string name="node_detail_position_z">Z</string>
    <string name="node_detail_update_rate">Normal update rate</string>
    <string name="node_detail_stationary_update_rate">Stationary update rate</string>
    <string name="node_detail_statistics">Statistics</string>
    <string name="node_detail_network">Network</string>
    <string name="node_detail_password">Password</string>
    <string name="node_detail_node_type">Node type</string>
    <string name="node_detail_operating_firmware">Operating firmware</string>
    <string name="node_detail_uwb_mode">UWB</string>
    <string name="node_detail_firmware_update">UWB firmware update</string>
    <string name="node_detail_ble">BLE</string>
    <string name="node_detail_accelerometer">Stationary detection</string>
    <string name="node_detail_led_indication">LED</string>
    <string name="node_detail_label">Label</string>
    <string name="node_detail_hw_version">HW version</string>
    <string name="node_detail_fw1_version">FW1 version</string>
    <string name="node_detail_fw2_version">FW2 version</string>
    <string name="node_detail_fw1_checksum">FW1 checksum</string>
    <string name="node_detail_fw2_checksum">FW2 checksum</string>
    <string name="node_detail_ranging_anchors">Ranging anchors</string>
    <string name="node_detail_initiator">Initiator</string>
    <string name="node_detail_bridge">Bridge</string>
    <string name="node_detail_seat_number">Seat number</string>
    <string name="node_detail_cluster_map">Cluster map</string>
    <string name="node_detail_cluster_neighbour_map">Cluster n-map</string>
    <string name="node_detail_mac_stats">MAC stats</string>
    <string name="node_detail_anchor_list">Anchor list</string>
    <string name="node_detail_last_seen">Last seen</string>
    <string name="node_detail_responsive_mode">Responsive mode</string>
    <string name="node_detail_location_engine">Location engine</string>
    <string name="network_name_hint">Network name</string>
    <string name="btn_rename">Rename</string>
    <string name="new_network">create new…</string>
    <string name="save">Save</string>
    <string name="btn_update">update</string>
    <string name="btn_cancel">@android:string/cancel</string>
    <string name="btn_okay">okay</string>
    <string name="btn_ok">OK</string>
    <string name="btn_settings">settings</string>
    <string name="unknown_network">network id %1$s</string>
    <string name="undo">UNDO</string>
    <string name="ok">OK</string>
    <string name="declared_network_title">Network %1$s</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="slave_master_detail_slave_side">Master/Slave End Side (A/B)</string>
    <string name="slave_master_detail_config">Master/Slave Position (CM)</string>
    <string name="slave_master_assoc_config">Master/Slave Association ID</string>
    <string name="slave_master_assoc_input_hint">Enter the Association ID (e.g. Vehicle ID)</string>
    <string name="slave_master_vehicle_length_title">Master/Slave Vehicle Length (CM)</string>
    <string name="slave_master_vehicle_length_input_hint">Enter the Vehicle Length ID in Centimeters</string>
    <string name="slave_master_detail_pos_x_coupler">CPLR(+:inside)</string>
    <string name="slave_master_detail_pos_y_centerline">CL(+:COND.)</string>
    <string name="slave_master_detail_pos_z_top_of_rail">TOR(+:over)</string>
    <string name="slave_input_invalid">Invalid slave values!</string>
    <string name="master_input_invalid">Invalid master values!</string>
    <string name="slave_input_exceeds_range">Slave values out of range!</string>
    <string name="master_input_exceeds_range">Master values out of range!</string>
    <string name="slave_master_must_select_side">Slave/Master must select end side!</string>
    <string name="slave_master_field_x_title">CPLR: </string>
    <string name="slave_master_field_y_title">CL: </string>
    <string name="slave_master_field_z_title">TOR: </string>
    <string name="slave_master_field_x_detail">Longitudinal distance towards coupler.</string>
    <string name="slave_master_field_y_detail">Lateral distance towards track center line.</string>
    <string name="slave_master_field_z_detail">Vertical distance towards top of the rail.</string>
    <string name="slave_master_field_x_detail_sign">\t\tPOS.(+) towards inside of the vehicle.</string>
    <string name="slave_master_field_y_detail_sign">\t\tPOS.(+) towards conductor side of that end.</string>
    <string name="slave_master_field_z_detail_sign">\t\tPOS.(+) upwards.</string>
    <string name="slave_master_field_error_explanation">\t\tExpect ±2cm error for Slave due to encoding method.</string>
    <string name="master_label_editable_disabled_explain">(Note: Label is NOT editable for Masters)</string>
    <string name="slave_info_position_property_title">Position (CM)</string>
    <string name="slave_info_position_template">CPLR = %1$s, CL = %2$s, TOR = %3$s, ID = %4$s</string>
    <string name="discovery_section_title_networks">networks</string>
    <string name="discovery_section_title_unassigned_networks">unassigned networks</string>
    <string name="discovery_section_title_unassigned_devices">unassigned devices</string>
    <string name="discovered_panid_title">Devices with PAN ID %1$s</string>
    <string name="discovery_multiselection_action_assign">Assign</string>
    <string name="discovery_multiselect_title">Select Devices (%1$d)</string>
    <string name="node_detail_position_input_invalid">Invalid position values!</string>
    <string name="node_detail_must_selected_network">Network not selected!</string>
    <string name="node_detail_empty_node_label">Empty node label!</string>
    <string name="network_removed">Network \'%1$s\' removed</string>
    <string name="node_removed">Node \'%1$s\' removed</string>
    <string name="update_rate_100ms">100 ms/10 Hz</string>
    <string name="update_rate_200ms">200 ms/5 Hz</string>
    <string name="update_rate_500ms">500 ms/2 Hz</string>
    <string name="update_rate_1s">1 s/1 Hz</string>
    <string name="update_rate_2s">2 s/0.5 Hz</string>
    <string name="update_rate_5s">5 s/0.2 Hz</string>
    <string name="update_rate_10s">10 s/0.1 Hz</string>
    <string name="update_rate_30s">30 s/0.03 Hz</string>
    <string name="update_rate_1m">1 min/0.017 Hz</string>
    <string name="update_rate_2m">2 min/0.0083 Hz</string>
    <string name="update_rate_5m">5 min/0.0033 Hz</string>
    <string name="update_rate_10m">10 min/0.0017 Hz</string>
    <string name="update_rate_default">default</string>
    <string name="not_set">&lt;not set&gt;</string>
    <string name="millisecond">%1$d ms</string>
    <string name="unsupported_update_rate_value">N/A</string>
    <string name="node_type_anchor">anchor</string>
    <string name="node_type_tag">tag</string>
    <string name="node_type_slave">slave</string>
    <string name="node_type_master">master</string>
    <string name="slave_master_side_A">A End</string>
    <string name="slave_master_side_B">B End</string>
    <string name="slave_master_side_unknown">Unknown (default)</string>
    <string name="node_ble_pattern">BLE: %1$s</string>
    <string name="node_id_pattern">ID: %1$s</string>
    <string name="tap_to_show_discovered_nodes">New nodes discovered, %1$s to show them.</string>
    <string name="tap_here">TAP HERE</string>
    <string name="stop_position_observation">Stop Position Obs</string>
    <string name="start_position_observation">Start Position Obs</string>
    <string name="anchor_label">Anchor Label</string>
    <string name="tag_label">Tag Label</string>
    <string name="copy">To clipboard</string>
    <string name="share">Share/Download</string>
    <string name="clear">Clear</string>
    <string name="copied_to_clipboard">copied</string>
    <string name="value_not_known_tabular">--</string>
    <string name="value_not_known_dropdown">N/A</string>
    <string name="menu_rename">Rename network</string>
    <string name="menu_forget">Forget network</string>
    <string name="menu_firmware_status">Firmware status</string>
    <string name="menu_switch_operation_mode">Switch operation mode to %1$s</string>
    <string name="menu_autopositioning">Auto positioning</string>
    <string name="menu_show_errors">Show errors</string>
    <string name="max_number_of_tracked_tags_reached">Maximum number of tracked tags with distances is %1$d</string>
    <string name="error">[ERROR]</string>
    <string name="warning">[WARN]</string>
    <string name="how_many_times">%1$dX</string>
    <string name="node_edit_uwb_firmware_update">UWB FIRMWARE UPDATE</string>
    <string name="node_edit_accelerometer">STATIONARY DETECTION</string>
    <string name="node_edit_led">LED</string>
    <string name="node_edit_ble">BLE</string>
    <string name="node_edit_initiator">INITIATOR</string>
    <string name="node_edit_responsive_mode">RESPONSIVE MODE</string>
    <string name="node_edit_location_engine">LOCATION ENGINE</string>
</resources>