<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ LEAPS - Low Energy Accurate Positioning System.
  ~
  ~ Copyright (c) 2016-2017, LEAPS. All rights reserved.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nodeDetailsContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarFadeDuration="0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/activity_vertical_quarter_margin"
        android:paddingBottom="@dimen/activity_vertical_half_margin">

        <!-- dummy view which takes the focus (when edittext is 'unfocused') -->
        <View
            android:layout_width="0px"
            android:layout_height="0px"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <EditText
            android:id="@+id/etNodeLabel"
            style="@style/nodeTitleEdit"
            android:animateLayoutChanges="true"
            android:hint="@string/anchor_label"
            android:inputType="text|textNoSuggestions|textCapWords"
            android:text="NS-2344" />

        <TextView
            android:id="@+id/masterEtNodeLabelDisabledExplain"
            style="@style/NodeDetailReadOnlyPayload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp"
            android:text="@string/master_label_editable_disabled_explain" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp">

            <TextView
                style="@style/NodeDetailReadOnlyTitle"
                android:text="@string/node_detail_id" />

            <TextView
                android:id="@+id/tvNodeId"
                style="@style/NodeDetailReadOnlyPayload"
                android:text="uuid" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp">

            <TextView
                style="@style/NodeDetailReadOnlyTitle"
                android:text="@string/node_detail_ble_address" />

            <TextView
                android:id="@+id/tvNodeBleAddress"
                style="@style/NodeDetailReadOnlyPayload"
                android:text="AA:BB:CC:DD:EE:FF" />

        </LinearLayout>

        <View style="@style/HorizontalRuler" />

        <TextView
            style="@style/NodeDetailPropertyTitle"
            android:text="@string/node_detail_node_type" />

        <LinearLayout
            android:id="@+id/nodeTypeSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNodeType"
                style="@style/NodeDetailPropertyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Anchor" />

            <TextView
                style="@style/SpinnerLikeArrow"
                android:text="&#x25BC;" />

        </LinearLayout>

        <TextView
            style="@style/NodeDetailPropertyTitle"
            android:text="@string/node_detail_network" />

        <LinearLayout
            android:id="@+id/networkNameSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNetworkName"
                style="@style/NodeDetailPropertyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Blanchards" />

            <TextView
                style="@style/SpinnerLikeArrow"
                android:text="&#x25BC;" />

        </LinearLayout>

        <TextView
            style="@style/NodeDetailPropertyTitle"
            android:text="@string/node_detail_uwb_mode" />

        <LinearLayout
            android:id="@+id/uwbModeSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvUwbMode"
                style="@style/NodeDetailPropertyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="off" />

            <TextView
                style="@style/SpinnerLikeArrow"
                android:text="&#x25BC;" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/updateRateContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/updateRateLabel"
                style="@style/NodeDetailPropertyTitle"
                android:text="@string/node_detail_update_rate" />

            <LinearLayout
                android:id="@+id/updateRateSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvUpdateRate"
                    style="@style/NodeDetailPropertyValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="500ms" />

                <TextView
                    android:id="@+id/arrowUpdateRate"
                    style="@style/SpinnerLikeArrow"
                    android:text="&#x25BC;" />

            </LinearLayout>

            <TextView
                android:id="@+id/stationaryUpdateRateLabel"
                style="@style/NodeDetailPropertyTitle"
                android:text="@string/node_detail_stationary_update_rate" />

            <LinearLayout
                android:id="@+id/stationaryUpdateRateSelector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvStationaryUpdateRate"
                    style="@style/NodeDetailPropertyValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="5s" />

                <TextView
                    android:id="@+id/arrowStationaryUpdateRate"
                    style="@style/SpinnerLikeArrow"
                    android:text="&#x25BC;" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/HorizontalRuler" />

        <CheckBox
            android:id="@+id/chboxFirmwareUpdate"
            style="@style/NodeDetailPropertyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/node_edit_uwb_firmware_update" />

        <CheckBox
            android:id="@+id/chboxLedIndication"
            style="@style/NodeDetailPropertyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/node_edit_led" />

        <CheckBox
            android:id="@+id/chboxBleEnabled"
            style="@style/NodeDetailPropertyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/node_edit_ble" />

        <CheckBox
            android:id="@+id/chboxResponsiveMode"
            style="@style/NodeDetailPropertyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/node_edit_responsive_mode" />

        <CheckBox
            android:id="@+id/chboxLocationEngine"
            style="@style/NodeDetailPropertyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/node_edit_location_engine" />

        <CheckBox
            android:id="@+id/chboxAccelerometer"
            style="@style/NodeDetailPropertyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/node_edit_accelerometer" />

        <CheckBox
            android:id="@+id/chboxInitiator"
            style="@style/NodeDetailPropertyTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/node_edit_initiator" />

        <TextView
            android:id="@+id/tvPositionTitle"
            style="@style/NodeDetailPropertyTitle"
            android:text="@string/node_detail_position" />

        <LinearLayout
            android:id="@+id/tvPositionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/node_value_left_padding"
            android:layout_marginEnd="@dimen/node_value_left_padding"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                style="@style/NodeDetailPositionCompound"
                android:hint="@string/node_detail_position_x">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/node_detail_position_x"
                    style="@style/editText.coordinate" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/NodeDetailPositionCompound"
                android:hint="@string/node_detail_position_y">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/node_detail_position_y"
                    style="@style/editText.coordinate" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/NodeDetailPositionCompound"
                android:hint="@string/node_detail_position_z">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/node_detail_position_z"
                    style="@style/editText.coordinate" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvSlavePosTitle"
            style="@style/NodeDetailPropertyTitle"
            android:text="@string/slave_detail_config" />

        <LinearLayout
            android:id="@+id/tvSlaveConfigContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/node_value_left_padding"
            android:layout_marginEnd="@dimen/node_value_left_padding"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                style="@style/NodeDetailPositionCompound"
                android:hint="@string/slave_detail_pos_x_coupler">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/slave_detail_pos_x"
                    style="@style/editText.coordinate" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/NodeDetailPositionCompound"
                android:hint="@string/slave_detail_pos_y_centerline">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/slave_detail_pos_y"
                    style="@style/editText.coordinate" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/NodeDetailPositionCompound"
                android:hint="@string/slave_detail_pos_z_top_of_rail">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/slave_detail_pos_z"
                    style="@style/editText.coordinate" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvSlaveAssocTitle"
            style="@style/NodeDetailPropertyTitle"
            android:text="@string/slave_assoc_config" />

        <LinearLayout
            android:id="@+id/tvSlaveMasterAssocContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/node_value_left_padding"
            android:layout_marginEnd="@dimen/node_value_left_padding"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                style="@style/NodeDetailPositionCompound"
                android:hint="@string/slave_master_assoc_input_hint">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/slave_master_detail_association"
                    style="@style/editText.coordinate" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/slaveMasterFieldExplainContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="0dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tvSlaveMasterFieldExplainXTitle"
                    style="@style/NodeDetailReadOnlyTitle"
                    android:text="@string/slave_master_field_x_title"/>

                <TextView
                    android:id="@+id/tvSlaveMasterFieldExplainXDetail"
                    style="@style/NodeDetailReadOnlyPayload"
                    android:text="@string/slave_master_field_x_detail" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="0dp"
                android:id="@+id/tvSlaveMasterFieldExplainXSign"
                style="@style/NodeDetailReadOnlyPayload"
                android:text="@string/slave_master_field_x_detail_sign" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tvSlaveMasterFieldExplainYTitle"
                    style="@style/NodeDetailReadOnlyTitle"
                    android:text="@string/slave_master_field_y_title"/>

                <TextView
                    android:id="@+id/tvSlaveMasterFieldExplainYDetail"
                    style="@style/NodeDetailReadOnlyPayload"
                    android:text="@string/slave_master_field_y_detail" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="0dp"
                android:id="@+id/tvSlaveMasterFieldExplainYSign"
                style="@style/NodeDetailReadOnlyPayload"
                android:text="@string/slave_master_field_y_detail_sign" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/tvSlaveMasterFieldExplainZTitle"
                    style="@style/NodeDetailReadOnlyTitle"
                    android:text="@string/slave_master_field_z_title" />

                <TextView
                    android:id="@+id/tvSlaveMasterFieldExplainZDetail"
                    style="@style/NodeDetailReadOnlyPayload"
                    android:text="@string/slave_master_field_z_detail" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="0dp"
                android:id="@+id/tvSlaveMasterFieldExplainZSign"
                style="@style/NodeDetailReadOnlyPayload"
                android:text="@string/slave_master_field_z_detail_sign" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>